--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "main": "src/server.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "build": ""
   },
   "dependencies": {
     "express": "^4.17.1",
