--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,32 @@ services:
       - "2181:2181"
   kafka:
     image: wurstmeister/kafka:2.11-1.1.0
+    depends_on:
+      - zookeeper
     ports:
       - "9092:9092"
     environment:
-      # KAFKA_ADVERTISED_HOST_NAME: kafka
-      KAFKA_ADVERTISED_HOST_NAME: localhost
+      KAFKA_BROKER_ID: 1
+      KAFKA_ADVERTISED_HOST_NAME: kafka
+      # KAFKA_ADVERTISED_HOST_NAME: localhost
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_CREATE_TOPICS: "issue-certificate:1:1,:1:1"
+      KAFKA_CREATE_TOPICS: "issue-certificate:1:1"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+  rest_api:
+    depends_on:
+      - kafka
+    build: ./api/
+    command: npm run dev
+    ports:
+      - "3540:3540"
+  certification:
+    depends_on:
+      - rest_api
+    build: ./certification
+    command: npm run dev
+    # environment:
+    #   COMPOSE_CONVERT_WINDOWS_PATH: 1
+    volumes:
+      - ./certification/src/certificates/:/usr/app/src/certificates
+      - ./certification/src/temp/:/usr/app/src/temp
